adding Tuition Payment module contraints - module prequisites

--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -1013,51 +1013,74 @@ If you don't know the CRN, use the Class Search button to find them. When you ge
 			<div id="step-19" class="collapse">				   
 			  <div class="step-content">			  		
 		  		<h3 class="title">Tuition and Billing Services</h3>
-				  <p>
-				  	<b>
-				  	Please note: The tuition deposit is separate from any Housing payments. First time applicants who plan to live on campus  are required to pay a $100 one-time non-refundable administration charge. 
-				    </b>
-				  </p>
+					<% if  @reg_complete = 0 || @residency_complete = 0 || @housing_meal_plans_complete = 0   %>
+                         
 
-				  <p>
-                  Florida Atlantic University is pleased to announce there will be no net increase of tuition and fees for the 2014-15 Academic Year. The last day to pay the balance due for Fall 2014 is August 25, 2014.
-                  </p>
-                  
-                  <p>
-                  Tuition and fees amounts are detailed at:
-                  </p>
-                  <a href="http://www.fau.edu/controller/student_information/tuition_breakdown.php" target="_blank">
-                     
-                        http://www.fau.edu/controller/student_information/tuition_breakdown.php 
-                  </a>
-                  <br>
-                  
-                  
-                  <p>All payments will need to be made online, by mail or by using the drop box at the Boca Raton campus.</p>
+							<p>You have holds on your record which are preventing you from completing your tution payment. The holds are listed below:</p>
 
-                  <p>It is important to note you have the following options to pay your bill:</p>
+				  			<ol>
+				  				<% if @reg_complete = 0 %>
+				  					<li>You must be registered for 12 or more credits in any semester.</li>
+				  				<% end %>
 
-                  <ul>
-                  	<li>Online by using your Visa, MasterCard, American Express or Discover Card. Using the online system, the third party vendor will process your payment and apply it to your student account with a non-refundable fee of 2.60%</li>
-                  	<li>Online by using your personal checking/savings account without a non-refundable fee.</li>
-                  	<li>By check or money order mailed to Florida Atlantic University. The postmark of your payment will be used to determine timeliness of the payment.</li>
-                  	<li>By check or money order dropped into the drop box located at the Cashier’s Office in the Student Services Building on the Boca Raton campus.</li>
-                  </ul>
-                  <br>
-                  <p>
-                		If you have any questions, please email <a href="mailto:webcontroller@fau.edu">webcontroller@fau.edu</a> or call tuition and billing services (561)297-6101.
-                  </p>
+				  				<% if @residency_complete = 0 %>
+				  					<li>You must complete the Residency Classification for Tuition Purposes and submit the required documentation.</li>
+				  				<% end %>
 
-                  <p>
-                    <a href='http://www.fau.edu/registrar/pdf/acadcal1516.pdf' target='_blank'>
-              	   		[More Information]
-              	    </a>  | 
-              	     <a href='http://www.fau.edu/controller/student_information/pdfs/Summer_2015_Fee_Bulletin_2.pdf ' target='_blank'>
-              	   		[Fee Payment Information]
-              	    </a>
-              	  </p>
+				  				<% if @housing_meal_plans_complete = 0 && @housing_fee_required == 1  %>
+				  					<li>You must submit a housing contract and deposit to the Department of Housing and Residential Life.</li>
+				  				<% end %>
+				  				
+				  			</ol>
+					
 
-              
+					<% else %>
+						 <p>
+						  	<b>
+						  	Please note: The tuition deposit is separate from any Housing payments. First time applicants who plan to live on campus  are required to pay a $100 one-time non-refundable administration charge. 
+						    </b>
+						  </p>
+
+						  <p>
+		                  Florida Atlantic University is pleased to announce there will be no net increase of tuition and fees for the 2014-15 Academic Year. The last day to pay the balance due for Fall 2014 is August 25, 2014.
+		                  </p>
+		                  
+		                  <p>
+		                  Tuition and fees amounts are detailed at:
+		                  </p>
+		                  <a href="http://www.fau.edu/controller/student_information/tuition_breakdown.php" target="_blank">
+		                     
+		                        http://www.fau.edu/controller/student_information/tuition_breakdown.php 
+		                  </a>
+
+		                  <br>	                  
+		                  
+		                  <p>All payments will need to be made online, by mail or by using the drop box at the Boca Raton campus.</p>
+
+		                  <p>It is important to note you have the following options to pay your bill:</p>
+
+		                  <ul>
+		                  	<li>Online by using your Visa, MasterCard, American Express or Discover Card. Using the online system, the third party vendor will process your payment and apply it to your student account with a non-refundable fee of 2.60%</li>
+		                  	<li>Online by using your personal checking/savings account without a non-refundable fee.</li>
+		                  	<li>By check or money order mailed to Florida Atlantic University. The postmark of your payment will be used to determine timeliness of the payment.</li>
+		                  	<li>By check or money order dropped into the drop box located at the Cashier’s Office in the Student Services Building on the Boca Raton campus.</li>
+		                  </ul>
+		                  <br>
+		                  <p>
+		                		If you have any questions, please email <a href="mailto:webcontroller@fau.edu">webcontroller@fau.edu</a> or call tuition and billing services (561)297-6101.
+		                  </p>
+
+		                  <p>
+		                    <a href='http://www.fau.edu/registrar/pdf/acadcal1516.pdf' target='_blank'>
+		              	   		[More Information]
+		              	    </a>  | 
+		              	     <a href='http://www.fau.edu/controller/student_information/pdfs/Summer_2015_Fee_Bulletin_2.pdf ' target='_blank'>
+		              	   		[Fee Payment Information]
+		              	    </a>
+		              	  </p>
+					
+					<% end %>
+	              
 				</div>			
 			</div>
 		  </li>
