Financial Aid SSB link added

--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -79,6 +79,7 @@ Hello, <%= session[:cas_user] %>!
 		      <a href="https://sctformsalt.fau.edu:8484/ssomanager/c/SSB?pkg=twbkwbis.P_GenMenu?name=bmenu.P_RegMnu" target="_blank">Registration:</a><br>
               <a href="https://sctformsalt.fau.edu:8484/ssomanager/c/SSB?pkg=bwgkoemr.P_ViewEmrgContacts" target="_blank">  Emergency Contacts:</a><br>
               <a href="https://sctformsalt.fau.edu:8484/ssomanager/c/SSB?pkg=lwgkr911.p_initial_fau_alert_load" target="_blank"> FAU Alert</a><br>
+              <a href="https://sctformsalt.fau.edu:8070/TESTdad/twbkwbis.P_GenMenu?name=bmenu.P_FinAidMainMnu" target="_blank">Fin. Aid. Info</a><br>
               <a href="http://www.fau.edu/finaid/resources/forms.php" target="_blank"> Fin aid Forms:</a><br>
           </p>
           <hr>
@@ -486,7 +487,8 @@ Hello, <%= session[:cas_user] %>!
 
 					  		<p>To apply for financial aid, complete an online Free Application for Federal Student Aid at www.fafsa.ed.gov beginning January 1. The FAU priority deadline is March 1. Financial aid correspondence will be sent to your MyFAU email account. For more information, visit the financial aid website at www.fau.edu/finaid or call 561-297-3530.&nbsp;
 					  			<a title="FAU Financial Aid Information" href="http://www.fau.edu/finaid" target="_blank">[More Information]</a> | 
-					  			<a title="FAU Financial Aid Forms" href="http://www.fau.edu/finaid/resources/forms.php" target="_blank">[FAFSA Form Information]</a>
+					  			<a title="FAU Financial Aid Forms" href="http://www.fau.edu/finaid/resources/forms.php" target="_blank">[FAFSA Form Information]</a> |
+					  			<a href="https://sctformsalt.fau.edu:8070/TESTdad/twbkwbis.P_GenMenu?name=bmenu.P_FinAidMainMnu" target="_blank">[Your Financial Aid Information]</a>
 
 					  		</p>
 
@@ -984,7 +986,7 @@ If you don't know the CRN, use the Class Search button to find them. When you ge
 
 				
 				<p>
-					<a href="http://www.fau.edu/uas/registration.php" target="_blank">[More Information]</a>
+					<a href="http://www.fau.edu/uas/registration.php" target="_blank">[More Information]</a> |  <a href="https://sctformsalt.fau.edu:8484/ssomanager/c/SSB?pkg=twbkwbis.P_GenMenu?name=bmenu.P_RegMnu" target="_blank">[Your Registration Info]</a>
 				</p>
 
 		  		<% end %>
@@ -1071,6 +1073,7 @@ If you don't know the CRN, use the Class Search button to find them. When you ge
 		                  </p>
 
 		                  <p>
+		                  	<a href="https://sctformsalt.fau.edu:8484/ssomanager/c/SSB?pkg=wsak_touchnet.p_touchnet_link" target="_blank">[Your Tuition Payment Information]</a> |
 		                    <a href='http://www.fau.edu/registrar/pdf/acadcal1516.pdf' target='_blank'>
 		              	   		[More Information]
 		              	    </a>  | 
@@ -1103,6 +1106,7 @@ If you don't know the CRN, use the Class Search button to find them. When you ge
 			  <div class="step-content">			  		
 		  		<h3 class="title">Emergency Contacts</h3>
 				<p> Please be on the lookout for the FAU Alert and Statement of Responsibility forms/screens when you login to Self Service for the first time. You  must verify and submit both before the respective holds are lifted and access is granted to Self Service.</p>
+				 <a href="https://sctformsalt.fau.edu:8484/ssomanager/c/SSB?pkg=bwgkoemr.P_ViewEmrgContacts" target="_blank"> [Your Emergency Contact Information]</a>
 			  </div>			
 			</div>
 		  </li>
@@ -1126,7 +1130,7 @@ If you don't know the CRN, use the Class Search button to find them. When you ge
 				<p>FAU Alert is the alert and notification system used to inform the University community of potential or actual emergency events or threats.&nbsp; It comprises of several tools including blast e-mails, text messages, call-out, outdoor warning sirens, and indoor notification systems. 
                
 
-               <a title="FAU Alert" href="http://www.fau.edu/emergency/universityalerts.php" target="_blank">[More Information]</a>.</p>
+               <a title="FAU Alert" href="http://www.fau.edu/emergency/universityalerts.php" target="_blank">[More Information]</a> | <a href="https://sctformsalt.fau.edu:8484/ssomanager/c/SSB?pkg=lwgkr911.p_initial_fau_alert_load" target="_blank">[Your FAU Alert Info]</a></p>
 			  </div>			
 			</div>
 		  </li>
