added dep_complete_flag/oars_complete_flag and To Do List sidebar

--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -932,24 +932,24 @@ Hello, <%= session[:cas_user] %>!
 			  <div class="step-content">			  		
 		  		<h3 class="title">Register for Classes</h3>
 
-		  		<% if  @deposit_complete = 0 || @account_complete = 0 || @oars_complete = 0 || @immunization_complete == 0  %>
+		  		<% if  @dep_complete_flag == 0 || @account_complete === 0 || @oars_complete_flag == 0 || @immunization_complete == 0  %>
 		  			
 		  			<p>You have holds on your record which are preventing you from registering for classes. The holds are listed below:</p>
 
 		  			<ol>
-		  				<% if @deposit_complete = 0 %>
+		  				<% if @dep_complete_flag == 0 %>
 		  					<li>You must confirm your intention to enroll and secure your space in the class with a $200.00 non-refundable deposit.</li>
 		  				<% end %>
 
-		  				<% if @account_complete = 0 %>
+		  				<% if @account_complete == 0 %>
 		  					<li>You must claim your FAU NetID.</li>
 		  				<% end %>
 
-		  				<% if @oars_complete = 0 %>
+		  				<% if @oars_complete_flag == 0 %>
 		  					<li>You must complete Online Advising (OARS).</li>
 		  				<% end %>
 
-		  				<% if @immunization_complete = 0 %>
+		  				<% if @immunization_complete == 0 %>
 		  					<li>You must provide proof of immunizations and vaccinations.</li>
 		  				<% end %>
 
@@ -1337,26 +1337,73 @@ If you don't know the CRN, use the Class Search button to find them. When you ge
        <div id="sidebar" class="col-sm-3 sidebar checkout-progress">
        	<aside class="widget">
 		  <header>
-			<h3 class="title">Your Tasks</h3>
+			<h3 class="title">To Do List</h3>
 		  </header>
 		  <ul class="progress-list">
-			<li id="welcomenav"><a href="#welcometitle" class="edit">information <i class='fa fa-info'></i> </a>Welcome</li>
-			<li id="depositnav"><a href="#" class="edit"><%= get_statusicon(@deposit_available, @deposit_complete) %></a> Pay Deposit</li>
-			<li id="accountnav"><a href="#" class="edit"><%= get_statusicon(@account_available, @account_complete) %></a> Create Account</li>
-			<li id="commnav"><a href="#" class="edit"><%= get_statusicon(@communication_available, @communication_complete) %></a> Communication Preference</li>
-			<li id="immunenav"><a href="#" class="edit"><%= get_statusicon(@immunization_available, @immunization_complete) %></a> Immunization Holds</li>
-			<li><a href="#" class="edit"><%= get_statusicon(@residency_available, @residency_complete) %></a> Residency Validation</li>
+			<!-- <li id="welcomenav"><a href="#welcometitle" class="edit">information <i class='fa fa-info'></i> </a>Welcome</li> -->
+			
+			<% if  @deposit_available == 1 && @dep_complete_flag == 0 %>
+				<li id="depositnav"><a href="#" class="edit"></a> Pay Deposit</li>
+			<% end %>
+
+			<% if  @account_available == 1 &&  @account_complete == 0 %>
+				<li id="accountnav"><a href="#" class="edit"><%= get_statusicon(@account_available, @account_complete) %></a> Create Account</li>
+			<% end %>
+			
+			<% if  @communication_available == 1 &&  @communication_complete == 0 %>
+				<li id="commnav"><a href="#" class="edit"><%= get_statusicon(@communication_available, @communication_complete) %></a> Communication Preference</li>
+			<% end %>
+
+			<% if  @immunization_available == 1 && @immunization_complete == 0 %>
+				<li id="immunenav"><a href="#" class="edit"><%= get_statusicon(@immunization_available, @immunization_complete) %></a> Immunization Holds</li>
+			<% end %>
+
+			<% if  @residency_available == 1 && @residency_complete == 0 %>
+				<li><a href="#" class="edit"><%= get_statusicon(@residency_available, @residency_complete) %></a> Residency Validation</li>
+			<% end %>
+
+			<% if  @finaid_available == 1 && @finaid_complete == 0 %>
 			<li id="finaidnav"><a href="#" class="edit"><%= get_statusicon(@finaid_available, @finaid_complete) %></a> Financial Aid</li>
-			<li><a href="#" class="edit"><%= get_statusicon(@housing_fee_available, @housing_fee_complete) %></a> Housing Fee</li>
+			<% end %>
+
+			<% if  @housing_fee_available == 1 && @housing_fee_complete == 0 %>
+				<li><a href="#" class="edit"><%= get_statusicon(@housing_fee_available, @housing_fee_complete) %></a> Housing Fee</li>
+			<% end %>
+
+			<% if  @housing_meal_plans_available == 1 && @housing_meal_plans_complete == 0 %>
 			<li><a href="#" class="edit"><%= get_statusicon(@housing_meal_plans_available, @housing_meal_plans_complete) %></a> Housing & Meal Plans</li>
+			<% end %>
+
+			<% if  @aleks_available == 1 && @aleks_complete == 0 %>
 			<li><a href="#" class="edit"><%= get_statusicon(@aleks_available, @aleks_complete) %></a> Math Placement Exam </li>
+			<% end %>
+
+
+			<% if  @orientation_available == 1 && @orientation_complete == 0 %>
 			<li><a href="#" class="edit"><%= get_statusicon(@orientation_available, @orientation_complete) %></a> Orientation</li>
+			<% end %>
+
 			<li><a href="#" class="edit">information <i class='fa fa-info'></i></a> Learning Communities</li>
+			
+			<% if  @oars_available == 1 && @oars_complete_flag == 0 %>
 			<li><a href="#" class="edit"><%= get_statusicon(@oars_available, @oars_complete) %></a> Online Advising & Resource System</li>
-			<li><a href="#" class="edit"><%= get_statusicon(@reg_available, @reg_complete) %></a> Registration</li>
-			<li><a href="#" class="edit"><%= get_statusicon(@tuition_available, @tuition_complete) %></a> Tuition Payment</li>
-			<li><a href="#" class="edit"><%= get_statusicon(@emergency_available, @emergency_complete) %></a> Emergency Contacts</li>
-			<li><a href="#" class="edit"><%= get_statusicon(@fau_alert_available, @fau_alert_complete) %></a> FAU Alert Info</li>
+			<% end %>
+
+
+			<% if  @reg_available == 1 && @reg_complete == 0 %>
+				<li><a href="#" class="edit"><%= get_statusicon(@reg_available, @reg_complete) %></a> Registration</li>
+			<% end %>
+
+			<% if  @tuition_available == 1 && @tuition_complete == 0 %>
+				<li><a href="#" class="edit"><%= get_statusicon(@tuition_available, @tuition_complete) %></a> Tuition Payment</li>
+			<% end %>
+			<% if  @emergency_available == 1 && @emergency_complete == 0 %>
+				<li><a href="#" class="edit"><%= get_statusicon(@emergency_available, @emergency_complete) %></a> Emergency Contacts</li>
+			<% end %>
+			<% if  @fau_alert_available == 1 && @fau_alert_complete == 0 %>
+				<li><a href="#" class="edit"><%= get_statusicon(@fau_alert_available, @fau_alert_complete) %></a> FAU Alert Info</li>
+			<% end %>
+
 			<li><a href="#" class="edit">information <i class='fa fa-info'></i></a> Owl Card</li>
 			<li><a href="#" class="edit">information <i class='fa fa-info'></i></a> Book Advance Program</li>
 			<li><a href="#" class="edit"><a href="#raptors" class="edit">information <i class='fa fa-info'></i></a> Car Registration</li>
