added sso to the link to the Finanical Aid Caclulator

--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -1078,7 +1078,7 @@ If you don't know the CRN, use the Class Search button to find them. When you ge
 					<%# else %>
 						 <p>
 						  	<b>
-							Before paying your tuition you may want to take a look at our  <a href="https://sctformsalt.fau.edu:8070/TESTdad/kwr_finaid_calc.P_ViewAcctTerm" target='_blank'>Financial Aid Disbursement Estimator</a>. The disbursement estimate provided using this calculator does not represent a final determination of financial aid disbursements; it is an estimate based on your enrollment and award status now. 
+							Before paying your tuition you may want to take a look at our  <a href="https://sctformsalt.fau.edu:8484/ssomanager/c/SSB?pkg=kwr_finaid_calc.P_ViewAcctTerm" target='_blank'>Financial Aid Disbursement Estimator</a>. The disbursement estimate provided using this calculator does not represent a final determination of financial aid disbursements; it is an estimate based on your enrollment and award status now. 
 							</b>
 						 </p>
 						 <hr>
